--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VJF7866Z35"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VJF7866Z35');
+</script>
+
 <meta http-equiv="refresh" content="0; url=home/">
