tarjetas en links

--- a/links/index.html
+++ b/links/index.html
@@ -21,10 +21,30 @@
 
       gtag("config", "G-VJF7866Z35");
     </script>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="style.css">
+
+
   </head>
   <body>
-    <h1>links</h1>
+
+    <div class="imgPerfil"></div>
+    <div class="title">
+      <h1>soyCypher</h1>
+      <h2>Imitador de Cypher</h2>
+    </div>
+
+    <div class="cards">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+
+    </div>
   </body>
 </html>
