--- a/home/index.html
+++ b/home/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
+    <link rel="shortcut icon" href="../favicon.ico" />
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-VJF7866Z35"
