añadir links. arreglar favicon

--- a/links/index.html
+++ b/links/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="../favicon.ico" />
+  <link rel="shortcut icon" href="../favicon.png" />
+
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
 
   <title>Links</title>
 
@@ -38,32 +43,35 @@
   </div>
 
   <div class="cards">
-    <div class="card">
-      <div class="icono twitter"></div>
+    <div class="card twitter" destino="http://twitter.com/soycypher">
+      <div class="icono "></div>
       <p class="texto">Twitter</p>
     </div>
-    <div class="card">
-      <div class="icono instagram"></div>
+    <div class="card instagram" destino="http://instagram.com/soycypher">
+      <div class="icono "></div>
       <p class="texto">Instagram</p>
     </div>
-    <div class="card">
-      <div class="icono twitch"></div>
+    <div class="card twitch" destino="http://twitch.tv/soycypher">
+      <div class="icono "></div>
       <p class="texto">Twitch</p>
     </div>
-    <div class="card">
-      <div class="icono tiktok"></div>
+    <div class="card tiktok" destino="http://tiktok.com/@soycypher">
+      <div class="icono "></div>
       <p class="texto">Tiktok</p>
     </div>
-    <div class="card">
-      <div class="icono discord"></div>
+    <div class="card discord" destino="http://discord.link/soycypher">
+      <div class="icono "></div>
       <p class="texto">Discord</p>
     </div>
-    <div class="card">
-      <div class="icono regalo"></div>
+    <div class="card regalo" destino="https://www.paypal.com/donate/?hosted_button_id=RSGC34TXQW8ZW">
+      <div class="icono "></div>
       <p class="texto">Si quieres apoyarme mas aun</p>
     </div>
 
   </div>
+
+
+  <script src="code.js"></script>
 </body>
 
 </html>
