--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
-    <link rel="shortcut icon" href="../favicon.ico" />
+    <link rel="shortcut icon" href="../favicon.png" />
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-VJF7866Z35"
@@ -19,6 +19,12 @@
 
       gtag("config", "G-VJF7866Z35");
     </script>
+
+
+<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>test</h1>
