--- a/links/index.html
+++ b/links/index.html
@@ -65,7 +65,7 @@
     </div>
     <div class="card regalo" destino="https://www.paypal.com/donate/?hosted_button_id=RSGC34TXQW8ZW">
       <div class="icono "></div>
-      <p class="texto">Si quieres apoyarme mas aun</p>
+      <p class="texto">Si quieres apoyarme más aún 💙</p>
     </div>
 
   </div>
