add email and change to <a>

--- a/links/index.html
+++ b/links/index.html
@@ -43,30 +43,34 @@
   </div>
 
   <div class="cards">
-    <div class="card twitter" destino="http://twitter.com/soycypher">
+    <a class="card twitter" target="_blank" href="http://twitter.com/soycypher">
       <div class="icono "></div>
       <p class="texto">Twitter</p>
-    </div>
-    <div class="card instagram" destino="http://instagram.com/soycypher">
+    </a>
+    <a class="card instagram" target="_blank" href="http://instagram.com/soycypher">
       <div class="icono "></div>
       <p class="texto">Instagram</p>
-    </div>
-    <div class="card twitch" destino="http://twitch.tv/soycypher">
+    </a>
+    <a class="card twitch" target="_blank" href="http://twitch.tv/soycypher">
       <div class="icono "></div>
       <p class="texto">Twitch</p>
-    </div>
-    <div class="card tiktok" destino="http://tiktok.com/@soycypher">
+    </a>
+    <a class="card tiktok" target="_blank" href="http://tiktok.com/@soycypher">
       <div class="icono "></div>
       <p class="texto">Tiktok</p>
-    </div>
-    <div class="card discord" destino="http://discord.link/soycypher">
+    </a>
+    <a class="card discord" target="_blank" href="http://discord.link/soycypher">
       <div class="icono "></div>
       <p class="texto">Discord</p>
-    </div>
-    <div class="card regalo" destino="https://www.paypal.com/donate/?hosted_button_id=RSGC34TXQW8ZW">
+    </a>
+    <a class="card email" target="_blank" href="mailto:soycypher.contactame@gmail.com">
+      <div class="icono "></div>
+      <p class="texto">soycypher.contactame@gmail.com</p>
+    </a>
+    <a class="card regalo" target="_blank" href="https://www.paypal.com/donate/?hosted_button_id=RSGC34TXQW8ZW">
       <div class="icono "></div>
       <p class="texto">Si quieres apoyarme más aún 💙</p>
-    </div>
+    </a>
 
   </div>
 
