redirigir solo a links

--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
   gtag('config', 'G-VJF7866Z35');
 </script>
 
-<meta http-equiv="refresh" content="0; url=home/">
+<meta http-equiv="refresh" content="0; url=links/">
